--- a/urazy/templates/urazy/_layout.html
+++ b/urazy/templates/urazy/_layout.html
@@ -1,28 +1,25 @@
-
-
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="color-scheme" content="light dark">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    {% load static %}
+    <link rel="stylesheet" href="{% static '_layout.css' %}"> 
     <title>Úrazy v ČR</title>
   </head>
   <body>
-    <header class="container">
-        <nav>
+    <header>
+      <h1>Úrazy v ČR</h1>
+      <nav>
           <ul>
-            <li><strong> Úrazy v ČR </strong></li>
+              {% for link in navigation_links %}
+                  <li><a class="layout-link" href="{{ link.url }}">{{ link.name }}</a></li>
+              {% endfor %}
           </ul>
-          <ul>
-             {% for link in navigation_links %}
-              <li><a href="{{ link.url }}">{{ link.name }}</a></li>
-            {% endfor %}
-        </ul>  
       </nav>
-    </header>
-    <main class="container">
+  </header>
+    <main>
       {% block content %}
       
       {% endblock %}
