--- a/urazy/templates/urazy/zpusob.html
+++ b/urazy/templates/urazy/zpusob.html
@@ -1,30 +1,33 @@
 {% extends 'urazy/_layout.html' %}
-{% block content %}  
-<h1>Přehled úrazů dle příčiny zranění</h1>
-    <table border="1">
-        <thead>
-            <tr>
-                <th>Zpusob</th>
-                {% for rok in years %}
-                    <th>{{ rok }}</th>
-                {% endfor %}
-            </tr>
-        </thead>
-        <tbody>
-            {% for cause_group in cause_groups %}
-                <tr>
-                    <td>{{ cause_group.zpusob }}</td> 
-                    {% for rok in years %}
-                        <td>
-                            {% for data in zpusob_data %}
-                                {% if data.zpusob == cause_group.zpusob and data.rok == rok %}
-                                    {{ data.pocet }} 
-                                {% endif %}
-                            {% endfor %}
-                        </td>
-                    {% endfor %}
-                </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+
+{% block content %}
+  {% load static %} 
+  <link rel="stylesheet" href="{% static '_layout.css' %}">
+  
+  <h2>Četnosti úrazů dle způsobu vzniku</h2>
+  
+<div class ="center"> 
+  <table class="table_zpusob">
+    <thead>
+      <tr>
+        <th>Způsob</th>
+        {% for rok in roky %}
+          <th>{{ rok }}</th>
+        {% endfor %}
+      </tr>
+    </thead>
+    <tbody>
+      {% for kategorie in kategorie %}
+        <tr>
+          <td>{{ kategorie.zpusob }}</td>
+          {% for hodnota in kategorie.hodnoty %}
+            <td>{{ hodnota }}</td>
+          {% endfor %}
+        </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+</div> 
+
+<img src="data:image/png;base64,{{ obrazek_grafu }}" alt="Sloupcový graf">
 {% endblock %}
